assets/css/style.css
:root {
--header-font: "Comfortaa", cursive;
--body-font: "Roboto Condensed", sans-serif;
--blue-grey: #90ADC6;
--off-white: #E9EAEC;
--yellow: #FAD02C;
--dark: #333652;
}

body {
    display: flex;
    flex-direction: column;
    height: 100vh;
    width: 100%;
    margin: none;
    background-color: var(--dark);
}

.hero {
    display: flex;
    flex-direction: column;
    background-color: var(--yellow);
    margin: 15px;
}

.position-center {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content:center;
    margin: auto;
}

.hero-header {
    padding: 20px;
    color: var(--dark);
    font-family: var(--header-font);
    font-size: 50px;
}

.tagline {
    font-family: var(--body-font);
    font-size: 32px;
    margin-bottom: 20px;
}

main {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.card-header {
    color: var(--yellow);
    font-family: var(--header-font);
    font-size: 32px;
    padding: 5px;
    margin-left: 5px;
}

.card-body {
    display: flex;
    flex-direction: column;
    font-family: var(--body-font);
    font-size: 22px;
    padding: 5px;
}

.search-card {
    display: flex;
    flex-direction: column;
    max-width: 300px;
    margin-left: 20px;
    background-color: var(--blue-grey);
}

#location {
    padding: 10px;
    border-width: 0;
    margin: 5px;
    border-radius: 5px;
    font-family: var(--body-font);
}

input {
    all: unset;
    background-color: var(--off-white);
    color: var(--dark);
    font-size: 20px;
}

button {
    background-color: var(--yellow);
    color: var(--dark);
    font-family: var(--header-font);
    font-size: 20px;
    border: none;
    border-radius: 5px;
    padding: 5px;
    width: 97%;
    margin: auto;
    margin-bottom: 5px;
}

button:hover {
    background-color: var(--dark);
    color: var(--yellow);
}

.results-card {
    display: flex;
    flex-direction: row;
    background-color: var(--blue-grey);
}

